logs/dag_id=save_city_info_weather/run_id=manual__2024-09-14T18:03:40.437889+00:00/task_id=save_city_info_weather/attempt=1.log
[2024-09-14T18:03:41.240+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather.save_city_info_weather manual__2024-09-14T18:03:40.437889+00:00 [queued]>
[2024-09-14T18:03:41.246+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: save_city_info_weather.save_city_info_weather manual__2024-09-14T18:03:40.437889+00:00 [queued]>
[2024-09-14T18:03:41.246+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T18:03:41.246+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 6
[2024-09-14T18:03:41.246+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-14T18:03:41.253+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): save_city_info_weather> on 2024-09-14 18:03:40.437889+00:00
[2024-09-14T18:03:41.256+0000] {standard_task_runner.py:55} INFO - Started process 2431 to run task
[2024-09-14T18:03:41.259+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'save_city_info_weather', 'save_city_info_weather', 'manual__2024-09-14T18:03:40.437889+00:00', '--job-id', '54', '--raw', '--subdir', 'DAGS_FOLDER/saver_info.py', '--cfg-path', '/tmp/tmppimdx4sx']
[2024-09-14T18:03:41.260+0000] {standard_task_runner.py:83} INFO - Job 54: Subtask save_city_info_weather
[2024-09-14T18:03:41.312+0000] {task_command.py:389} INFO - Running <TaskInstance: save_city_info_weather.save_city_info_weather manual__2024-09-14T18:03:40.437889+00:00 [running]> on host 0c5fe11d0c9c
[2024-09-14T18:03:41.349+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=me
AIRFLOW_CTX_DAG_ID=save_city_info_weather
AIRFLOW_CTX_TASK_ID=save_city_info_weather
AIRFLOW_CTX_EXECUTION_DATE=2024-09-14T18:03:40.437889+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-14T18:03:40.437889+00:00
[2024-09-14T18:03:41.350+0000] {sql.py:253} INFO - Executing: 
            if not exists weathers (
                id INTEGER PRIMARY KEY AUTOINCREMENT
                city_name character varying
                max_temp character varying
                min_temp character varying
                wind character varying
                description character varying
            )
        
[2024-09-14T18:03:41.355+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T18:03:41.461+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-09-14T18:03:41.485+0000] {sql.py:364} INFO - Running statement: 
            if not exists weathers (
                id INTEGER PRIMARY KEY AUTOINCREMENT
                city_name character varying
                max_temp character varying
                min_temp character varying
                wind character varying
                description character varying
            )
        , parameters: None
[2024-09-14T18:03:41.488+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "if"
LINE 2:             if not exists weathers (
                    ^

[2024-09-14T18:03:41.495+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=save_city_info_weather, task_id=save_city_info_weather, execution_date=20240914T180340, start_date=20240914T180341, end_date=20240914T180341
[2024-09-14T18:03:41.506+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 54 for task save_city_info_weather (syntax error at or near "if"
LINE 2:             if not exists weathers (
                    ^
; 2431)
[2024-09-14T18:03:41.531+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-14T18:03:41.542+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
